# apifs

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  dockerfile  leiras.txt  manpage  run.sh  test_ui.sh
src/: apifs_object.rs  command.rs  data.rs  exit_codes.rs  file_manipulation.rs  help.txt  main.rs  media.rs  note.rs  options.rs  reminder.rs  server.rs
src/command/: delete.rs  help.rs  remind.rs  show.rs  start.rs  stop.rs  write_note.rs
src/scripts/: is_running.sh  play_sound.sh  signal_to_server.sh  stop_apifs.sh
tests/: command_tests.rs  start_stop.rs
