[package]
name = "apifs"
authors = ["CrackPython <pappgellert2003@gmail.com>"]
repository = "https://github.com/SarkoziJazmin/APIFS"
description = "CLI Reminder application"
edition = "2024"
keywords = ["cli", "reminder"]
categories = ["command-line-utilites"]
readme = "readme.md"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
cli-log = "2.1.0"
gtk4 = "0.10.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
thread-priority = "2.1.0"
